[gd_scene load_steps=5 format=1]

[ext_resource path="res://party/shop.gd" type="Script" id=1]
[ext_resource path="res://miscs/panel_background.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/normal_menu.tres" type="DynamicFont" id=4]

[node name="Shop" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="PanelTitle" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 32.0
margin/right = 152.0
margin/bottom = 92.0
custom_styles/panel = ExtResource( 2 )

[node name="Title" type="Label" parent="PanelTitle"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "Shop"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SaleList" type="ItemList" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 124.0
margin/right = 496.0
margin/bottom = 568.0
custom_styles/bg_focus = ExtResource( 2 )
custom_styles/bg = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )

[node name="PanelCurrent" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 528.0
margin/top = 124.0
margin/right = 992.0
margin/bottom = 184.0
custom_styles/panel = ExtResource( 2 )

[node name="Current" type="Label" parent="PanelCurrent"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 0.0
margin/right = 448.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 3 )
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PanelGold" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 760.0
margin/top = 508.0
margin/right = 992.0
margin/bottom = 568.0
custom_styles/panel = ExtResource( 2 )

[node name="Gold" type="Label" parent="PanelGold"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 0.0
margin/right = 216.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "888888888 G"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="item_selected" from="SaleList" to="." method="_on_SaleList_item_selected"]


